<resources>
    <string name="app_name">FriendsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eye_text">Цвет глаз: </string>
    <string name="fruit_text">Любимый фрукт: </string>
    <string name="person_friends">Друзья: </string>
    <string name="refresh_data_text">Обновить данные</string>

    <string name="company_text">Компания:</string>
    <string name="email_text">Email:</string>
    <string name="phone_text">Номер телефона:</string>
    <string name="registered_text">Зарегистрирован:</string>
    <string name="coordinates_text">Местоположение:</string>
    <string name="address_text">Адрес:</string>
    <string name="about_text">О себе:</string>

</resources>