<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PersonDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/person_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Name Surname Name Surname"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/person_details_age"
            />

        <TextView
            android:id="@+id/person_details_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="19"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/person_details_name"
            app:layout_constraintLeft_toRightOf="@id/person_details_name"
            />

        <TextView
            android:id="@+id/person_details_company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/company_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_name"
            />

        <TextView
            android:id="@+id/person_details_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="WaveAccess"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_company_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_name"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/email_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_company"
            />

        <TextView
            android:id="@+id/person_details_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="wave@yandex.ru"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_email_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_company"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/phone_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_email"
            />

        <TextView
            android:id="@+id/person_details_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="8-956-672-11-59"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_phone_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_email"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/address_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_phone"
            />

        <TextView
            android:id="@+id/person_details_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Suzdalskoye Highway 34, 67"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_address_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_phone"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_eye_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/eye_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_address"
            />

        <ImageView
            android:id="@+id/person_details_eye_color_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/person_details_eye_color"
            app:layout_constraintTop_toBottomOf="@id/person_details_address"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/person_details_favorite_fruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/fruit_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_eye_color"
            />

        <ImageView
            android:id="@+id/person_details_favorite_fruit_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/fruit_background"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/person_details_favorite_fruit"
            app:layout_constraintTop_toBottomOf="@id/person_details_eye_color_image"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/person_details_coordinates_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/coordinates_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_favorite_fruit"
            />

        <TextView
            android:id="@+id/person_details_coordinates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Широта .... Долгота ...."
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_coordinates_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_favorite_fruit"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_registered_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/registered_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_coordinates"
            />

        <TextView
            android:id="@+id/person_details_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Зарегистрирован ..."
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_registered_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_coordinates"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_about_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/about_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_registered"
            />

        <TextView
            android:id="@+id/person_details_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Some words about me. I live in Yaroslavl. I am 24 years."
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            app:layout_constraintLeft_toRightOf="@id/person_details_about_text"
            app:layout_constraintTop_toBottomOf="@id/person_details_registered"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/person_details_text_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_friends"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_margin="3dp"
            android:background="@drawable/text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_about"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/person_details_recycler_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_details_text_friends"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>